# rustiness

./: .gitignore  .travis.yml  Cargo.toml  README.md
app/: Cargo.toml
app/src/: instruction_benchmark.rs  main.rs  runner.rs  screen2test.rs  screentest.rs  sdlscreentest.rs  soundtest.rs
app/src/debugger/: breakpoint.rs  command.rs  mod.rs  opcodes.rs  screen.rs
gliumscreen/: Cargo.toml
gliumscreen/src/: background.rs  lib.rs  sprites.rs
integration/: Cargo.toml  build.rs  install-cc65.sh
integration/ca65/: nes.cfg  nrom_horizontal_mirroring_test.s  nrom_test.s  nrom_vertical_mirroring_test.s
integration/ca65/common/: macros.s
integration/ca65/cpu_dummy_reads/: cpu_dummy_reads.s
integration/ca65/instr_tests/: abs_xy.s  absolute.s  immediate.s  implied.s  ind_x.s  ind_y.s  zero_page.s  zp_xy.s
integration/ca65/ppu_sprite_hit/: alignment.s  timing.s
integration/ca65/vbl_timing/: even_odd_timing.s  nmi_on_timing.s  nmi_timing.s  vbl_set_time.s
integration/src/: audio_device.rs  controller.rs  lib.rs  rom_test.rs
integration/tests/: tester.rs
nes/: Cargo.toml
nes/src/: addressing.rs  cpu.rs  instructions.rs  lib.rs  memory.rs  opcodes.rs
nes/src/borrow/: mod.rs  mutableref.rs
nes/tests/: ppu_mirroring.rs  ppu_sprite_test.rs  ppu_tests.rs  ppu_tile_cache_test.rs  ppu_vbl_timing_test.rs  sprite_0_hit.rs
sdl2/: Cargo.toml
sdl2/src/: audio.rs  lib.rs  screen.rs  standard_controller.rs
sdl2screen/: Cargo.toml
sdl2screen/src/: lib.rs
src/: main.rs  nes.rs  opcodes.rs
src/nes/: addressing.rs  cpu.rs  memory.rs  mod.rs  opcodes.rs
(+55 files in other folders)
