[package]
name = "app"
version = "0.1.0"
authors = ["Marcus Bergenlid <marcus.bergenlid@ooyala.com>"]

[dependencies]
nes = { path = "../nes" }
nes_sdl2 = { path = "../sdl2" }
rand = "0.3"
histogram = "0.6.6"
chrono = "0.4"
getopts = "0.2"
image = "0.14.0"

[features]
sound = ["nes/sound"]
ppu = ["nes/ppu"]
sod = ["nes/sod"]
